--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: black;
+  overflow: hidden;
+}
+
+.placement-square {
+  border: 5px solid black;
+  background: gray;
+}
+
+.piece-display {
+  font-size: 10em;
+}
+
+.side-bar {
+  height: 100vh;
+  width: 20%;
+  background: #00525f;
+  color: black;
+}
